fix various css problems including the shifting menu in IE

--- a/WebContent/css/ie.css
+++ b/WebContent/css/ie.css
@@ -19,10 +19,10 @@ div#maincontainer p{
 }
 
 ul#navlist {
-	margin-top: -20px;
+	margin-top: -21px;
 }
 
-#navlist a, #navlist a:hover {
-	padding: 10px;
+#navlist a, #navlist a:v:visited, #navlist a:hover {
+	padding: 9px;
 	line-height: 36px;
 }
